--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Aounon
-middle_name:
-last_name: Kumar
+first_name: Eugene
+middle_name: W
+last_name: Park
 email:
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Academic Website
@@ -16,7 +16,7 @@ keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your o
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
-url: https://aounon.github.io # the base hostname & protocol for your site
+url: https://parkakn.github.io # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/. Leave blank for root
 last_updated: true # set to true if you want to display last updated in the footer
 impressum_path: # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
@@ -67,11 +67,11 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-linkedin_username: aounon-kumar # your LinkedIn user name
-github_username: aounon # your GitHub user name
-scholar_userid: NjhpUykAAAAJ # your Google Scholar ID
-semanticscholar_id: 31910622 # your Semantic Scholar ID
-dblp_url: https://dblp.org/pid/191/8334.html # your DBLP profile url
+linkedin_username: eugene-park- # your LinkedIn user name
+github_username: parkakn # your GitHub user name
+scholar_userid: UEU1gqwAAAAJ # your Google Scholar ID
+semanticscholar_id: # 31910622 # your Semantic Scholar ID
+dblp_url: # https://dblp.org/pid/191/8334.html # your DBLP profile url
 gitlab_username: # your GitLab user name
 x_username: # your X handle
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
