--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Eugene
 middle_name: W
 last_name: Park
-email:
+email: ewp@mit.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   Academic Website
 footer_text: >
